src/parser.output
   0  $accept : %entry% $end

   1  program :
   2          | program node

   3  node : NODE ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE

   4  fun_decl_list :
   5                | fun_decl_list fun_decl

   6  fun_decl : FUN dtype ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list compound_statement RBRACE

   7  compound_statement :
   8                     | compound_statement stmt

   9  stmt : expr SEMI
  10       | LBRACE compound_statement RBRACE
  11       | IF LPAREN expr RPAREN stmt
  12       | IF LPAREN expr RPAREN stmt ELSE stmt
  13       | WHILE LPAREN expr RPAREN stmt
  14       | FOR LPAREN expr SEMI expr SEMI expr RPAREN stmt
  15       | BREAK SEMI
  16       | CONTINUE SEMI
  17       | RETURN expr SEMI
  18       | RETURN SEMI
  19       | PRINT expr SEMI
  20       | FORWARD actual_list TO ID SEMI

  21  formal_list_opt :
  22                  | formal_list

  23  formal_list : dtype ID
  24              | formal_list COMMA dtype ID

  25  actual_list_opt :
  26                  | actual_list

  27  actual_list : expr
  28              | actual_list COMMA expr

  29  var_decl_list :
  30                | var_decl_list var_decl

  31  var_decl : dtype ID ASSIGN expr SEMI

  32  expr : ID
  33       | ID ASSIGN expr
  34       | CCONST
  35       | SCONST
  36       | LCONST
  37       | DCONST
  38       | BCONST
  39       | expr PLUS expr
  40       | expr MINUS expr
  41       | expr TIMES expr
  42       | expr DIVIDE expr
  43       | expr MOD expr
  44       | expr EQ expr
  45       | expr NEQ expr
  46       | expr LT expr
  47       | expr GT expr
  48       | expr LEQ expr
  49       | expr GEQ expr
  50       | expr AND expr
  51       | expr OR expr
  52       | ID LPAREN actual_list_opt RPAREN
  53       | LPAREN expr RPAREN
  54       | NOT expr

  55  dtype : CHAR
  56        | STRING
  57        | INT
  58        | FLOAT
  59        | BOOL
  60        | VOID

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	program : .  (1)

	.  reduce 1

	program  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : program . node  (2)
	%entry% : '\001' program .  (61)

	NODE  shift 4
	$end  reduce 61

	node  goto 5


state 4
	node : NODE . ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE  (3)

	ID  shift 6
	.  error


state 5
	program : program node .  (2)

	.  reduce 2


state 6
	node : NODE ID . LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE  (3)

	LPAREN  shift 7
	.  error


state 7
	node : NODE ID LPAREN . formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE  (3)
	formal_list_opt : .  (21)

	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	STRING  shift 11
	BOOL  shift 12
	VOID  shift 13
	RPAREN  reduce 21

	formal_list_opt  goto 14
	dtype  goto 15
	formal_list  goto 16


state 8
	dtype : INT .  (57)

	.  reduce 57


state 9
	dtype : CHAR .  (55)

	.  reduce 55


state 10
	dtype : FLOAT .  (58)

	.  reduce 58


state 11
	dtype : STRING .  (56)

	.  reduce 56


state 12
	dtype : BOOL .  (59)

	.  reduce 59


state 13
	dtype : VOID .  (60)

	.  reduce 60


state 14
	node : NODE ID LPAREN formal_list_opt . RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE  (3)

	RPAREN  shift 17
	.  error


state 15
	formal_list : dtype . ID  (23)

	ID  shift 18
	.  error


state 16
	formal_list_opt : formal_list .  (22)
	formal_list : formal_list . COMMA dtype ID  (24)

	COMMA  shift 19
	RPAREN  reduce 22


state 17
	node : NODE ID LPAREN formal_list_opt RPAREN . LBRACE var_decl_list fun_decl_list compound_statement RBRACE  (3)

	LBRACE  shift 20
	.  error


state 18
	formal_list : dtype ID .  (23)

	.  reduce 23


state 19
	formal_list : formal_list COMMA . dtype ID  (24)

	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	STRING  shift 11
	BOOL  shift 12
	VOID  shift 13
	.  error

	dtype  goto 21


state 20
	node : NODE ID LPAREN formal_list_opt RPAREN LBRACE . var_decl_list fun_decl_list compound_statement RBRACE  (3)
	var_decl_list : .  (29)

	.  reduce 29

	var_decl_list  goto 22


state 21
	formal_list : formal_list COMMA dtype . ID  (24)

	ID  shift 23
	.  error


state 22
	node : NODE ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list . fun_decl_list compound_statement RBRACE  (3)
	var_decl_list : var_decl_list . var_decl  (30)
	fun_decl_list : .  (4)

	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	STRING  shift 11
	BOOL  shift 12
	VOID  shift 13
	LPAREN  reduce 4
	LBRACE  reduce 4
	RBRACE  reduce 4
	ID  reduce 4
	FUN  reduce 4
	LCONST  reduce 4
	DCONST  reduce 4
	CCONST  reduce 4
	SCONST  reduce 4
	BCONST  reduce 4
	BREAK  reduce 4
	CONTINUE  reduce 4
	FOR  reduce 4
	IF  reduce 4
	RETURN  reduce 4
	WHILE  reduce 4
	PRINT  reduce 4
	NOT  reduce 4
	FORWARD  reduce 4

	fun_decl_list  goto 24
	dtype  goto 25
	var_decl  goto 26


state 23
	formal_list : formal_list COMMA dtype ID .  (24)

	.  reduce 24


state 24
	node : NODE ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list . compound_statement RBRACE  (3)
	fun_decl_list : fun_decl_list . fun_decl  (5)
	compound_statement : .  (7)

	FUN  shift 27
	LPAREN  reduce 7
	LBRACE  reduce 7
	RBRACE  reduce 7
	ID  reduce 7
	LCONST  reduce 7
	DCONST  reduce 7
	CCONST  reduce 7
	SCONST  reduce 7
	BCONST  reduce 7
	BREAK  reduce 7
	CONTINUE  reduce 7
	FOR  reduce 7
	IF  reduce 7
	RETURN  reduce 7
	WHILE  reduce 7
	PRINT  reduce 7
	NOT  reduce 7
	FORWARD  reduce 7

	compound_statement  goto 28
	fun_decl  goto 29


state 25
	var_decl : dtype . ID ASSIGN expr SEMI  (31)

	ID  shift 30
	.  error


state 26
	var_decl_list : var_decl_list var_decl .  (30)

	.  reduce 30


state 27
	fun_decl : FUN . dtype ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list compound_statement RBRACE  (6)

	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	STRING  shift 11
	BOOL  shift 12
	VOID  shift 13
	.  error

	dtype  goto 31


state 28
	node : NODE ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement . RBRACE  (3)
	compound_statement : compound_statement . stmt  (8)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 34
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	FOR  shift 43
	IF  shift 44
	RETURN  shift 45
	WHILE  shift 46
	PRINT  shift 47
	NOT  shift 48
	FORWARD  shift 49
	.  error

	stmt  goto 50
	expr  goto 51


state 29
	fun_decl_list : fun_decl_list fun_decl .  (5)

	.  reduce 5


state 30
	var_decl : dtype ID . ASSIGN expr SEMI  (31)

	ASSIGN  shift 52
	.  error


state 31
	fun_decl : FUN dtype . ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list compound_statement RBRACE  (6)

	ID  shift 53
	.  error


state 32
	expr : LPAREN . expr RPAREN  (53)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 54


state 33
	stmt : LBRACE . compound_statement RBRACE  (10)
	compound_statement : .  (7)

	.  reduce 7

	compound_statement  goto 55


state 34
	node : NODE ID LPAREN formal_list_opt RPAREN LBRACE var_decl_list fun_decl_list compound_statement RBRACE .  (3)

	.  reduce 3


state 35
	expr : ID .  (32)
	expr : ID . ASSIGN expr  (33)
	expr : ID . LPAREN actual_list_opt RPAREN  (52)

	ASSIGN  shift 56
	LPAREN  shift 57
	SEMI  reduce 32
	COMMA  reduce 32
	RPAREN  reduce 32
	PLUS  reduce 32
	MINUS  reduce 32
	TIMES  reduce 32
	DIVIDE  reduce 32
	MOD  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	LT  reduce 32
	GT  reduce 32
	LEQ  reduce 32
	GEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	TO  reduce 32


state 36
	expr : LCONST .  (36)

	.  reduce 36


state 37
	expr : DCONST .  (37)

	.  reduce 37


state 38
	expr : CCONST .  (34)

	.  reduce 34


state 39
	expr : SCONST .  (35)

	.  reduce 35


state 40
	expr : BCONST .  (38)

	.  reduce 38


state 41
	stmt : BREAK . SEMI  (15)

	SEMI  shift 58
	.  error


state 42
	stmt : CONTINUE . SEMI  (16)

	SEMI  shift 59
	.  error


state 43
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN stmt  (14)

	LPAREN  shift 60
	.  error


state 44
	stmt : IF . LPAREN expr RPAREN stmt  (11)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (12)

	LPAREN  shift 61
	.  error


state 45
	stmt : RETURN . expr SEMI  (17)
	stmt : RETURN . SEMI  (18)

	SEMI  shift 62
	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 63


state 46
	stmt : WHILE . LPAREN expr RPAREN stmt  (13)

	LPAREN  shift 64
	.  error


state 47
	stmt : PRINT . expr SEMI  (19)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 65


state 48
	expr : NOT . expr  (54)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 66


state 49
	stmt : FORWARD . actual_list TO ID SEMI  (20)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 67
	actual_list  goto 68


state 50
	compound_statement : compound_statement stmt .  (8)

	.  reduce 8


state 51
	stmt : expr . SEMI  (9)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	SEMI  shift 69
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 52
	var_decl : dtype ID ASSIGN . expr SEMI  (31)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 83


state 53
	fun_decl : FUN dtype ID . LPAREN formal_list_opt RPAREN LBRACE var_decl_list compound_statement RBRACE  (6)

	LPAREN  shift 84
	.  error


state 54
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : LPAREN expr . RPAREN  (53)

	RPAREN  shift 85
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 55
	compound_statement : compound_statement . stmt  (8)
	stmt : LBRACE compound_statement . RBRACE  (10)

	LPAREN  shift 32
	LBRACE  shift 33
	RBRACE  shift 86
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	FOR  shift 43
	IF  shift 44
	RETURN  shift 45
	WHILE  shift 46
	PRINT  shift 47
	NOT  shift 48
	FORWARD  shift 49
	.  error

	stmt  goto 50
	expr  goto 51


state 56
	expr : ID ASSIGN . expr  (33)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 87


state 57
	expr : ID LPAREN . actual_list_opt RPAREN  (52)
	actual_list_opt : .  (25)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	RPAREN  reduce 25

	expr  goto 67
	actual_list  goto 88
	actual_list_opt  goto 89


state 58
	stmt : BREAK SEMI .  (15)

	.  reduce 15


state 59
	stmt : CONTINUE SEMI .  (16)

	.  reduce 16


state 60
	stmt : FOR LPAREN . expr SEMI expr SEMI expr RPAREN stmt  (14)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 90


state 61
	stmt : IF LPAREN . expr RPAREN stmt  (11)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (12)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 91


state 62
	stmt : RETURN SEMI .  (18)

	.  reduce 18


state 63
	stmt : RETURN expr . SEMI  (17)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	SEMI  shift 92
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 64
	stmt : WHILE LPAREN . expr RPAREN stmt  (13)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 93


state 65
	stmt : PRINT expr . SEMI  (19)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	SEMI  shift 94
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 66
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
	expr : NOT expr .  (54)

	.  reduce 54


state 67
	actual_list : expr .  (27)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	COMMA  reduce 27
	RPAREN  reduce 27
	TO  reduce 27


state 68
	stmt : FORWARD actual_list . TO ID SEMI  (20)
	actual_list : actual_list . COMMA expr  (28)

	COMMA  shift 95
	TO  shift 96
	.  error


state 69
	stmt : expr SEMI .  (9)

	.  reduce 9


state 70
	expr : expr PLUS . expr  (39)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 97


state 71
	expr : expr MINUS . expr  (40)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 98


state 72
	expr : expr TIMES . expr  (41)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 99


state 73
	expr : expr DIVIDE . expr  (42)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 100


state 74
	expr : expr MOD . expr  (43)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 101


state 75
	expr : expr EQ . expr  (44)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 102


state 76
	expr : expr NEQ . expr  (45)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 103


state 77
	expr : expr LT . expr  (46)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 104


state 78
	expr : expr GT . expr  (47)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 105


state 79
	expr : expr LEQ . expr  (48)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 106


state 80
	expr : expr GEQ . expr  (49)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 107


state 81
	expr : expr AND . expr  (50)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 108


state 82
	expr : expr OR . expr  (51)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 109


state 83
	var_decl : dtype ID ASSIGN expr . SEMI  (31)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	SEMI  shift 110
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 84
	fun_decl : FUN dtype ID LPAREN . formal_list_opt RPAREN LBRACE var_decl_list compound_statement RBRACE  (6)
	formal_list_opt : .  (21)

	INT  shift 8
	CHAR  shift 9
	FLOAT  shift 10
	STRING  shift 11
	BOOL  shift 12
	VOID  shift 13
	RPAREN  reduce 21

	formal_list_opt  goto 111
	dtype  goto 15
	formal_list  goto 16


state 85
	expr : LPAREN expr RPAREN .  (53)

	.  reduce 53


state 86
	stmt : LBRACE compound_statement RBRACE .  (10)

	.  reduce 10


state 87
	expr : ID ASSIGN expr .  (33)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 33
	COMMA  reduce 33
	RPAREN  reduce 33
	TO  reduce 33


state 88
	actual_list_opt : actual_list .  (26)
	actual_list : actual_list . COMMA expr  (28)

	COMMA  shift 95
	RPAREN  reduce 26


state 89
	expr : ID LPAREN actual_list_opt . RPAREN  (52)

	RPAREN  shift 112
	.  error


state 90
	stmt : FOR LPAREN expr . SEMI expr SEMI expr RPAREN stmt  (14)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	SEMI  shift 113
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 91
	stmt : IF LPAREN expr . RPAREN stmt  (11)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (12)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	RPAREN  shift 114
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 92
	stmt : RETURN expr SEMI .  (17)

	.  reduce 17


state 93
	stmt : WHILE LPAREN expr . RPAREN stmt  (13)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	RPAREN  shift 115
	PLUS  shift 70
	MINUS  shift 71
	TIMES  shift 72
	DIVIDE  shift 73
	MOD  shift 74
	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	.  error


state 94
	stmt : PRINT expr SEMI .  (19)

	.  reduce 19


state 95
	actual_list : actual_list COMMA . expr  (28)

	LPAREN  shift 32
	ID  shift 35
	LCONST  shift 36
	DCONST  shift 37
	CCONST  shift 38
	SCONST  shift 39
	BCONST  shift 40
	NOT  shift 48
	.  error

	expr  goto 116


state 96
	stmt : FORWARD actual_list TO . ID SEMI  (20)

	ID  shift 117
	.  error


state 97
	expr : expr . PLUS expr  (39)
	expr : expr PLUS expr .  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 39
	COMMA  reduce 39
	RPAREN  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIVIDE  reduce 39
	MOD  reduce 39
	TO  reduce 39


state 98
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr MINUS expr .  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)

	EQ  shift 75
	NEQ  shift 76
	LT  shift 77
	GT  shift 78
	LEQ  shift 79
	GEQ  shift 80
	AND  shift 81
	OR  shift 82
	SEMI  reduce 40
	COMMA  reduce 40
	RPAREN  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	TIMES  reduce 40
	DIVIDE  reduce 40
	MOD  reduce 40
	TO  reduce 40


state 99
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr TIMES expr .  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . MOD expr  (43)
	expr : expr . EQ expr  (44)
	expr : expr . NEQ expr  (45)
	expr : expr . LT expr  (46)
	expr : expr . GT expr  (47)
	expr : expr . LEQ expr  (48)
	expr : expr . GEQ expr  (49)
	expr : expr . AND expr  (50)
	expr : expr . OR expr  (51)
